# py-lsl-gateway-client

./: .gitignore  pyproject.toml
lsl/: server.lsl
lsl_gw_client/: http.py  linkset.py
lsl_gw_client/models/: lslresponse.py
lslgwclient/: __init__.py  http.py  linkset.py
lslgwclient/client/: api.py  basehttp.py  http.py  linkset.py
lslgwclient/models/: __init__.py  lslresponse.py
tests/: conftest.py  test_get_info.py  test_get_prims.py  test_inventory.py  test_linkset_data.py  test_lslresponse.py
tests/fakes/: http.py
