[tool.poetry]
name = "lsl-gateway-client"
version = "24.7.0"
description = "Gateway from Python to LSL in Second Life - client"
authors = ["erfea <erfea.tux@gmail.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
packages = [
	{include = "lsl_gw_client"}
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.5"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
